added BookCard component

--- a/BooksStore/Pages/FetchData.razor
+++ b/BooksStore/Pages/FetchData.razor
@@ -43,7 +43,7 @@ else
     protected override async Task OnInitializedAsync()
     {
         forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
-        LoggingService.Log($"Number of items retrieved is {forecasts.Length}");
+        LoggingService.Log($"Number of items retrieved is {forecasts?.Length}");
     }
 
     public class WeatherForecast
