--- a/BooksStore/Pages/Index.razor
+++ b/BooksStore/Pages/Index.razor
@@ -9,10 +9,20 @@
 
 Welcome to your new app.
 
-<p>Api Url: @Configuration["ApiUrl"]</p>
+<BookCard Book="_firstBook" />
+<BookCard Book="_firstBook" WithButton="false" class="mt-3" />
 
 @if (!Host.IsDevelopment())
 {
     <SurveyPrompt Title="How is Blazor working for you?" />
 }
 
+@code 
+{
+    private Book _firstBook = new Book
+    {
+        AuthorName = "John Smith",
+        PublishingDate = new DateTime(2022, 08, 01),
+        Title = "Mastering Blazor WebAssembly"
+    };
+}
