--- a/BooksStore/Pages/Index.razor
+++ b/BooksStore/Pages/Index.razor
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting;
 @inject IConfiguration Configuration
 @inject IWebAssemblyHostEnvironment Host
+@inject IBooksService BooksService
 
 <PageTitle>Index</PageTitle>
 
@@ -12,17 +13,45 @@ Welcome to your new app.
 <BookCard Book="_firstBook" />
 <BookCard Book="_firstBook" WithButton="false" class="mt-3" />
 
+<h3>Available Books:</h3>
+<div style="display: flex">
+    @foreach (var book in _books)
+    {
+        <BookCard Book="book" OnAddToCartClicked="AddToCart" />
+    }
+</div>
+
+<h3 class="mt-3">My Cart</h3>
+<ul>
+    @foreach (var item in _booksCart)
+    {
+        <li>@item.Title</li>
+    }
+</ul>
+
 @if (!Host.IsDevelopment())
 {
     <SurveyPrompt Title="How is Blazor working for you?" />
 }
 
-@code 
+@code
 {
+    private List<Book> _books = new List<Book>();
+    private List<Book> _booksCart = new List<Book>();
     private Book _firstBook = new Book
+        {
+            AuthorName = "John Smith",
+            PublishingDate = new DateTime(2022, 08, 01),
+            Title = "Mastering Blazor WebAssembly"
+        };
+
+    protected override async Task OnInitializedAsync()
     {
-        AuthorName = "John Smith",
-        PublishingDate = new DateTime(2022, 08, 01),
-        Title = "Mastering Blazor WebAssembly"
-    };
+        _books = await BooksService.GetAllBooksAsync();
+    }
+
+    private void AddToCart(Book selectedBook)
+    {
+        _booksCart.Add(selectedBook);
+    }
 }
