added styling for components

--- a/BooksStore/Shared/BookCard.razor
+++ b/BooksStore/Shared/BookCard.razor
@@ -1,11 +1,13 @@
 ﻿
-<div style="border:1px solid black; padding:3px" @attributes="UserAttributes">
+<div style="@BackgroundStyle" 
+    @attributes="UserAttributes" 
+    class="card">
     <h6>@Book?.Title</h6>
     <p>Author: @Book?.AuthorName</p>
     <p>Publishing date: @Book?.PublishingDate</p>
     @if (WithButton)
     {
-        <button style="width:100%" @onclick="AddToCart">Add to Cart</button>
+        <button class="main-button" @onclick="AddToCart">Add to Cart</button>
     }
 </div>
 
@@ -21,6 +23,9 @@
 
     [Parameter]
     public EventCallback<Book?> OnAddToCartClicked { get; set; }
+
+    [CascadingParameter]
+    public string? BackgroundStyle { get; set; }
 
     private void AddToCart()
     {
