added NavBar component and added bootstrap 5 js script to index.html (so navbar collapse would work)

--- a/BooksStore/Pages/FetchData.razor
+++ b/BooksStore/Pages/FetchData.razor
@@ -2,6 +2,8 @@
 @inject HttpClient Http
 @inject ILoggingService LoggingService
 
+@layout UserLayout
+
 <PageTitle>Weather forecast</PageTitle>
 
 <h1>Weather forecast</h1>
