--- a/BooksStore/Pages/Counter.razor
+++ b/BooksStore/Pages/Counter.razor
@@ -2,14 +2,22 @@
 
 <PageTitle>Counter</PageTitle>
 
+
 <h1>Counter</h1>
 
 <p role="status">Current count: @currentCount</p>
+
+<DynamicComponent Type="componentType" Parameters="parameters" />
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
+    private Type componentType = typeof(SurveyPrompt);
+    private Dictionary<string, object> parameters = new()
+    {
+        {"Title", "Welcome to Blazor"}
+    };
 
     private void IncrementCount()
     {
