--- a/BooksStore/Pages/UserPages/Index.razor
+++ b/BooksStore/Pages/UserPages/Index.razor
@@ -6,20 +6,15 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<BookCard Book="_firstBook" />
-<BookCard Book="_firstBook" WithButton="false" class="mt-3" />
+<h1>Welcome to our Books Store!</h1>
 
 <h3>Available Books:</h3>
-<div style="display: flex">
-    @foreach (var book in _books)
-    {
-        <BookCard Book="book" OnAddToCartClicked="AddToCart" />
-    }
-</div>
+
+<DataListView TItemType="Book" Items="_books" ColumnsCount="4">
+    <ItemTemplate>
+        <BookCard Book="@context" OnAddToCartClicked="AddToCart" />
+    </ItemTemplate>
+</DataListView>
 
 <h3 class="mt-3">My Cart</h3>
 <ul>
@@ -55,12 +50,6 @@ Welcome to your new app.
     private bool _isWelcomeModalOpen = true;
     private List<Book> _books = new List<Book>();
     private List<Book> _booksCart = new List<Book>();
-    private Book _firstBook = new Book
-        {
-            AuthorName = "John Smith",
-            PublishingDate = new DateTime(2022, 08, 01),
-            Title = "Mastering Blazor WebAssembly"
-        };
 
     protected override async Task OnInitializedAsync()
     {
