--- a/BooksStore/App.razor
+++ b/BooksStore/App.razor
@@ -5,8 +5,19 @@
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+        <LayoutView Layout="@typeof(UserLayout)">
+            <div style="text-align:center;margin-top:20px">
+                <h3>
+                    <span style="color:red">
+                        <strong>Oops!</strong>
+                    </span> 
+                    Nothing can befound at this address
+                </h3>
+                <p>
+                    It looks like the page your requested in the
+                    URL cannot be found
+                </p>
+            </div>
         </LayoutView>
     </NotFound>
 </Router>
