--- a/BooksStore/Shared/NavBar.razor
+++ b/BooksStore/Shared/NavBar.razor
@@ -20,6 +20,9 @@
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/FetchData">Fetch Data</NavLink>
                 </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/book/form"><span class="oi oi-list-rich" aria-hidden="true"></span> Book Form</NavLink>
+                </li>
             </ul>
         </div>
     </div>
