--- a/BooksStore/Pages/BookForm.razor
+++ b/BooksStore/Pages/BookForm.razor
@@ -6,11 +6,11 @@
     <div class="col-6">
         <h2>Add a new book</h2>
         <EditForm Model="_book" OnSubmit="HandleBookFormSubmission">
-            <DataAnnotationsValidator />            
+            <DataAnnotationsValidator />
             <div class="form-group mt-1">
                 <label>Title</label>
                 <InputText @bind-Value="@_book.Title" class="form-control" />
-                <ValidationMessage For="() => _book.Title"/>
+                <ValidationMessage For="() => _book.Title" />
             </div>
             <div class="form-group mt-1">
                 <label>Author</label>
@@ -32,6 +32,12 @@
                 <InputNumber TValue="decimal" @bind-Value="@_book.Price" class="form-control" />
                 <ValidationMessage For="() => _book.Price" />
             </div>
+            <div class="form-group mt-1">
+				<label>Time</label>
+                <BooksStore.Blazor.Components.InputTime @bind-Value="@_time" class="form-control" />
+				<p>Selected time is @_time</p>
+			</div>
+
             <br />
             <h4>Format</h4>
             <InputRadioGroup TValue="BookFormat" @bind-Value="_bookFormat">
@@ -79,6 +85,7 @@
     }
     private BookFormat _bookFormat = BookFormat.Both;
     private SubmitBook _book = new();
+    private TimeOnly _time = new TimeOnly(12, 30, 0);
 
     private void HandleBookFormSubmission()
     {
