added state management for submit form (local storage)

--- a/BooksStore.Blazor.Components/BlazorSimpleMde.razor
+++ b/BooksStore.Blazor.Components/BlazorSimpleMde.razor
@@ -5,11 +5,24 @@
 
 @code 
 {
+    [Parameter]
+    public string? Content { get; set; }
+
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
             await JSRuntime.InvokeVoidAsync("initializeMarkdownEditor");
+
+            try
+            {
+                await JSRuntime.InvokeVoidAsync("setMarkdownEditorValue", Content);
+            }
+            catch (Exception)
+            {
+                
+                throw;
+            }
         }
     }
 
