--- a/BooksStore/Pages/Counter.razor
+++ b/BooksStore/Pages/Counter.razor
@@ -1,4 +1,6 @@
 ﻿@page "/counter"
+@inject AppStateContainer AppStateContainer
+@layout UserLayout
 
 <PageTitle>Counter</PageTitle>
 
@@ -7,9 +9,8 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<DynamicComponent Type="componentType" Parameters="parameters" />
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Increment Count</button>
 
 @code {
     private int currentCount = 0;
@@ -33,5 +34,6 @@
     private void IncrementCount()
     {
         currentCount++;
+        AppStateContainer.UpdateCounter(currentCount);
     }
 }
