--- a/BooksStore/Pages/UserPages/Index.razor
+++ b/BooksStore/Pages/UserPages/Index.razor
@@ -7,7 +7,7 @@
 @inject IJSRuntime JSRuntime
 @implements IDisposable
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Index | Page @PageNumber</PageTitle>
 
 <h1>Welcome to our Books Store!</h1>
 
@@ -17,6 +17,12 @@
         <BookCard Book="@context" OnAddToCartClicked="AddToCart" />
     </ItemTemplate>
 </DataListView>
+
+<div class="mt-2">
+    <button class="btn btn-primary" @onclick="() => GoToPage(1)">1</button>
+    <button class="btn btn-primary" @onclick="() => GoToPage(2)">2</button>
+    <button class="btn btn-primary" @onclick="() => GoToPage(3)">3</button>
+</div>
 
 <h3 class="mt-3">My Cart</h3>
 <ul>
@@ -52,6 +58,25 @@
     private bool _isWelcomeModalOpen = true;
     private List<Book> _books = new List<Book>();
     private List<Book> _booksCart = new List<Book>();
+
+    [Parameter]
+    [SupplyParameterFromQuery(Name="pageNumber")]
+    public int PageNumber { get; set; }
+
+    private void GoToPage(int pageNumber)
+    {
+        PageNumber = pageNumber;
+        Navigation.NavigateTo($"/?pageNumber={pageNumber}");
+        // TODO: Logic to fetch the books by the new page number
+    }
+
+    protected override void OnParametersSet()
+    {
+        if (PageNumber <= 0)
+        {
+            PageNumber = 1;
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
