--- a/BooksStore/Shared/NavBar.razor
+++ b/BooksStore/Shared/NavBar.razor
@@ -1,4 +1,6 @@
-﻿@inject IJSRuntime JSRuntime
+﻿@inject AppStateContainer AppStateContainer
+@implements IDisposable
+@inject IJSRuntime JSRuntime
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -17,7 +19,7 @@
                     <NavLink class="nav-link" href="/">Home</NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/Counter">Counter</NavLink>
+                    <NavLink class="nav-link" href="/Counter">Counter @currentCount</NavLink>
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/FetchData">Fetch Data</NavLink>
@@ -37,9 +39,27 @@
 
 @code
 {
+    private int currentCount = 0;
+    private void OnCounterChanged(int newCounter)
+    {
+        currentCount = newCounter;
+        StateHasChanged();
+    }
+
     private void ShowAlert()
     {
         var jsInProcess = (IJSInProcessRuntime)JSRuntime;
         jsInProcess.InvokeVoid("showAlert", "Unknown user");
+    }
+
+    protected override void OnInitialized()
+    {
+        currentCount = AppStateContainer.CurrentCounter;        
+        AppStateContainer.OnCounterChanged += OnCounterChanged;
+    }
+
+    public void Dispose()
+    {
+        AppStateContainer.OnCounterChanged -= OnCounterChanged;
     }
 }
