--- a/BooksStore/Pages/FetchData.razor
+++ b/BooksStore/Pages/FetchData.razor
@@ -44,7 +44,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("https://localhost:7188/WeatherForecast");
         LoggingService.Log($"Number of items retrieved is {forecasts?.Length}");
     }
 
