--- a/BooksStore/Pages/UserPages/Index.razor
+++ b/BooksStore/Pages/UserPages/Index.razor
@@ -5,7 +5,6 @@
 @inject IBooksService BooksService
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime
-@inject HttpClient Http
 @implements IDisposable
 
 <PageTitle>Index | Page @PageNumber</PageTitle>
@@ -64,21 +63,7 @@
     [SupplyParameterFromQuery(Name="pageNumber")]
     public int PageNumber { get; set; }
 
-    private async Task<List<Book>?> GetBooksAsync()
-    {
-        var response = await Http.GetAsync("/books");
-        if (response.IsSuccessStatusCode)
-        {
-            return await response.Content.ReadFromJsonAsync<List<Book>>();
-        }
-        else
-        {
-            var errorResponse = await response.Content.ReadFromJsonAsync<ApiErrorResponse>();
-
-            throw new Exception(errorResponse?.Message);
-            // TODO: Handle the error in Chapter 11
-        }
-    }
+    
 
     private void GoToPage(int pageNumber)
     {
@@ -96,12 +81,9 @@
     }
 
     protected override async Task OnInitializedAsync()
-    {
-        var module = await JSRuntime.InvokeAsync<IJSObjectReference>("import", "./scripts.js");
-        var randomBook = await module.InvokeAsync<Book>("getRandomBook");
-        Navigation.LocationChanged += Navigation_LocationChanged;
-        // _books = await BooksService.GetAllBooksAsync();
-        _books = await GetBooksAsync();
+    {        
+        _books = await BooksService.GetAllBooksAsync();
+        // _books = await GetBooksAsync();
     }
 
     private void AddToCart(Book selectedBook)
