--- a/BooksStore/Pages/FetchData.razor
+++ b/BooksStore/Pages/FetchData.razor
@@ -1,7 +1,8 @@
 ﻿@page "/fetchdata"
-@inject HttpClient Http
 @inject ILoggingService LoggingService
-
+@using Microsoft.AspNetCore.Authorization;
+@attribute [Authorize(Roles = "Admin")]
+@inject HttpClient Http
 @layout UserLayout
 
 <PageTitle>Weather forecast</PageTitle>
