--- a/BooksStore/Pages/UserPages/About.razor
+++ b/BooksStore/Pages/UserPages/About.razor
@@ -3,7 +3,4 @@
 <PageTitle>About</PageTitle>
 
 <h2>Welcome to BooksStore</h2>
-<p>
-    BooksStore allows you to disover best titles in tech and
-    more
-</p>
+<p>BooksStore allows you to disover best titles in tech and more</p>
