--- a/BooksStore/Pages/UserPages/Index.razor
+++ b/BooksStore/Pages/UserPages/Index.razor
@@ -5,6 +5,7 @@
 @inject IBooksService BooksService
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime
+@inject HttpClient Http
 @implements IDisposable
 
 <PageTitle>Index | Page @PageNumber</PageTitle>
@@ -32,24 +33,12 @@
     }
 </ul>
 
-@if (!Host.IsDevelopment())
-{
-    <SurveyPrompt Title="How is Blazor working for you?" />
-}
-
 <ModalPopup Title="Hi!" IsOpen="@_isWelcomeModalOpen" OnCloseClicked="() => _isWelcomeModalOpen = false">
     <ChildContent>
-        <p>
-            Welcome to our Books Store, here you will
-            find a huge collection of books to help you
-            build you career in software development,
-            enjoy it!
-        </p>
+        <p> Welcome to our Books Store, here you will find a huge collection of books to help you build you career in software development, enjoy it!</p>
     </ChildContent>
     <FooterContent>
-        <button class="btn btn-primary" @onclick="() => _isWelcomeModalOpen = false">
-            Discover It
-        </button>
+        <button class="btn btn-primary" @onclick="() => _isWelcomeModalOpen = false">Discover It</button>
     </FooterContent>
 </ModalPopup>
 
@@ -63,7 +52,8 @@
     [SupplyParameterFromQuery(Name="pageNumber")]
     public int PageNumber { get; set; }
 
-    
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthenticationState { get; set; }
 
     private void GoToPage(int pageNumber)
     {
@@ -82,6 +72,7 @@
 
     protected override async Task OnInitializedAsync()
     {        
+        Navigation.LocationChanged += Navigation_LocationChanged;
         _books = await BooksService.GetAllBooksAsync();
         // _books = await GetBooksAsync();
     }
