--- a/BooksStore/Pages/BookForm.razor
+++ b/BooksStore/Pages/BookForm.razor
@@ -1,10 +1,12 @@
 ﻿@page "/book/form"
 @using BooksStore.Blazor.Components;
 @using Blazored.LocalStorage;
+@using Microsoft.AspNetCore.Authorization;
 @inject ILocalStorageService LocalStorage
-@inject NavigationManager NavigationManager
 @inject IBooksService BooksService
+@inject NavigationManager NavigationManager
 @implements IDisposable
+@attribute [Authorize(Roles = "Admin")]
 
 <PageTitle>BooksStore | Add a new book</PageTitle>
 
