added Login/out features + stopping point pg 251

--- a/BooksStore/App.razor
+++ b/BooksStore/App.razor
@@ -4,9 +4,7 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(UserLayout)">
                 <NotAuthorized>
-                    <h3>You don't have the permissions to access this page</h3>
-                    <br />
-                    <a href="authentication/login" class="btn btn-primary">Login</a>
+                   <RedirectToLogin />
                 </NotAuthorized>
             </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
