--- a/BooksStore/Shared/BookCard.razor
+++ b/BooksStore/Shared/BookCard.razor
@@ -6,7 +6,14 @@
     <p>Publishing date: @Book?.PublishingDate</p>
     @if (WithButton)
     {
-        <button class="main-button" @onclick="AddToCart">Add to Cart</button>
+        <AuthorizeView Policy="UK_Customer">
+            <Authorized>
+                <button class="main-button" @onclick="AddToCart">Add to Cart</button>
+            </Authorized>
+            <NotAuthorized>
+                <p class="text-center">Books only available for sale in UK for the time being</p>
+            </NotAuthorized>
+        </AuthorizeView>
     }
 </div>
 
