--- a/BooksStore/Shared/NavBar.razor
+++ b/BooksStore/Shared/NavBar.razor
@@ -24,15 +24,15 @@
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/FetchData">Fetch Data</NavLink>
                 </li>
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="/book/form"><span class="oi oi-list-rich" aria-hidden="true"></span> Book Form</NavLink>
-                </li>
+                <AuthorizeView Roles="Admin">
+                    <li class="nav-item">
+                        <NavLink class="nav-link" href="/Book/Form">Add Book</NavLink>
+                    </li>
+                </AuthorizeView>
             </ul>
         </div>
         <div class="d-flex">
-            <button class="btn btn-outline-primary" @onclick="ShowAlert">
-                Login
-            </button>
+            <LoginDisplay />
         </div>
     </div>
 </nav>
