--- a/BooksStore/Pages/Counter.razor
+++ b/BooksStore/Pages/Counter.razor
@@ -34,6 +34,8 @@
     private void IncrementCount()
     {
         currentCount++;
+        if (currentCount > 5)
+            throw new Exception("Counter value must not exceed the value of 5");
         AppStateContainer.UpdateCounter(currentCount);
     }
 }
