--- a/BooksStore/App.razor
+++ b/BooksStore/App.razor
@@ -1,31 +1,34 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
-<CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(App).Assembly">
-        <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(UserLayout)">
-                <NotAuthorized>
-                   <RedirectToLogin />
-                </NotAuthorized>
-            </AuthorizeRouteView>
-            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-        </Found>
-        <NotFound>
-            <PageTitle>Not found</PageTitle>
-            <LayoutView Layout="@typeof(UserLayout)">
-                <div style="text-align:center;margin-top:20px">
-                    <h3>
-                        <span style="color:red">
-                            <strong>Oops!</strong>
-                        </span>
-                        Nothing can befound at this address
-                    </h3>
-                    <p>
-                        It looks like the page you requested in the
-                        URL cannot be found
-                    </p>
-                </div>
-            </LayoutView>
-        </NotFound>
-    </Router>
-</CascadingAuthenticationState>
+<ErrorHandler>
+    <CascadingAuthenticationState>
+        <Router AppAssembly="@typeof(App).Assembly">
+            <Found Context="routeData">
+                <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(UserLayout)">
+                    <NotAuthorized>
+                        <RedirectToLogin />
+                    </NotAuthorized>
+                </AuthorizeRouteView>
+                <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+            </Found>
+            <NotFound>
+                <PageTitle>Not found</PageTitle>
+                <LayoutView Layout="@typeof(UserLayout)">
+                    <div style="text-align:center;margin-top:20px">
+                        <h3>
+                            <span style="color:red">
+                                <strong>Oops!</strong>
+                            </span>
+                            Nothing can befound at this address
+                        </h3>
+                        <p>
+                            It looks like the page you requested in the
+                            URL cannot be found
+                        </p>
+                    </div>
+                </LayoutView>
+            </NotFound>
+        </Router>
+    </CascadingAuthenticationState>
+</ErrorHandler>
+
 
