--- a/BooksStore/Shared/NavBar.razor
+++ b/BooksStore/Shared/NavBar.razor
@@ -5,12 +5,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BooksStore</a>
-        <button class="navbar-toggler" type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -50,6 +45,12 @@
     {
         var jsInProcess = (IJSInProcessRuntime)JSRuntime;
         jsInProcess.InvokeVoid("showAlert", "Unknown user");
+    }
+
+    private async Task ShowAlertAsync()
+    {
+        var module = await JSRuntime.InvokeAsync<IJSObjectReference>("import", "./site.js");
+        await module.InvokeVoidAsync("showAlert", "Unkown user");
     }
 
     protected override void OnInitialized()
