--- a/BooksStore/Shared/RedirectToLogin.razor
+++ b/BooksStore/Shared/RedirectToLogin.razor
@@ -1,7 +1,8 @@
 ﻿@inject NavigationManager Navigation
 
 
-@code {
+@code 
+{
     protected override void OnInitialized()
     {
         Navigation.NavigateTo("/authentication/login");
