--- a/BooksStore/Shared/SurveyPrompt.razor
+++ b/BooksStore/Shared/SurveyPrompt.razor
@@ -1,4 +1,6 @@
-﻿<div class="alert alert-secondary mt-4">
+﻿@implements IDisposable
+
+<div class="alert alert-secondary mt-4">
     <span class="oi oi-pencil me-2" aria-hidden="true"></span>
     <strong>@Title</strong>
 
@@ -9,8 +11,13 @@
     and tell us what you think.
 </div>
 
-@code {
-    // Demonstrates how a parent component can supply parameters
+@code 
+{
     [Parameter]
     public string? Title { get; set; }
+
+    public void Dispose()
+    {
+        // Release unmanaged resources like releasing a file, unsubscribe from events,        
+    }
 }
