--- a/BooksStore/Shared/BookCard.razor.css
+++ b/BooksStore/Shared/BookCard.razor.css
@@ -3,6 +3,7 @@
     padding: 7px;
     box-shadow: 0px 3px 8px -3px rgb(0 0 0 / 75%);
     border-radius: 3px;
+    background-color: rgba(255,255,255,0.25);
 }
 
 .main-button {
