--- a/BooksStore/Shared/ModalPopup.razor.css
+++ b/BooksStore/Shared/ModalPopup.razor.css
@@ -1,20 +1,20 @@
 ﻿.overlay {
-    position: fixed; 
-    width: 100%; 
-    height: 100%; 
-    top: 0; 
-    left: 0; 
-    background-color: rgba(0,0,0,0.5); 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #181a1b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-box {
-    width: 400px; 
-    background-color: white; 
-    border-radius: 10px; 
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3); 
+    width: 400px;
+    background-color: #000000;
+    border-radius: 10px;
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
 }
 
     .modal-box .modal-header {
