--- a/BooksStore/wwwroot/css/app.css
+++ b/BooksStore/wwwroot/css/app.css
@@ -2,6 +2,10 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    background-color: #181a1b;
+    color: white;
+    scrollbar-color: rgb(128, 128, 128);
 }
 
 h1:focus {
